* web: HOST-0001 shared packages fix;

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -14,6 +14,15 @@
   <a (click)="tick()">{{ 'tick' }}</a>
   {{ ' | '}}
   <a (click)="send2au()">{{ 'send2au' }}</a>
+  {{ ' | '}}
+  <a (click)="go_au()">{{ 'go_au' }}</a>
+  {{ ' | '}}
+  <a (click)="go_faq()">{{ 'go_faq' }}</a>
+  {{ ' | '}}
+  <a (click)="unloadFaqModule()">{{ 'unloadFaq' }}</a>
+  {{ ' | '}}
+  <a (click)="refreshFaqModule()">{{ 'refreshFaq' }}</a>
+
 </div>
 <div class="host-container">
   <div class="routerDiv">
