token share wip;

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -19,10 +19,8 @@
   {{ ' | '}}
   <a (click)="go_faq()">{{ 'go_faq' }}</a>
   {{ ' | '}}
-  <a (click)="loadFaq5()">{{ 'refreshFaq' }}</a>
+  <a (click)="loadFaq5()">{{ 'refresh faq module' }}</a>
   {{ ' | '}}
-  <button (click)="unmountRoute('faq')">Unmount FAQ Route</button>
-
 </div>
 <div class="host-container">
   <div class="routerDiv">
