--- a/web/src/app/components/scaffold/scaffold.component.scss
+++ b/web/src/app/components/scaffold/scaffold.component.scss
@@ -1,13 +1,15 @@
 .row {
-    padding-top: 16px;
-    padding-left: 16px;
+    padding-top: 10px;
+    padding-left: 13px;
     display: grid;
-    grid-template-columns: 20px 250px 150px 150px  1fr;
-    & > div:nth-child(5n) {
-        color:red;
+    grid-template-columns: 20px 250px 150px 150px 1fr;
+
+    &>div:nth-child(5n) {
+        color: green;
     }
 }
-.container{
+
+.container {
     // position: relative;
     // top: -230px;
     // z-index: 9;
@@ -17,4 +19,5 @@
     overflow-y: auto;
     padding-bottom: 30px;
     box-sizing: border-box;
+    font-size: 14px;
 }
