--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -3,7 +3,7 @@
   {{ ' | '}}
   <a [routerLink]="['/faq/ticket']">{{ 'oldest' }}</a>
   {{ ' | '}}
-  <a [routerLink]="['/faq']">{{ 'faq' }}</a>
+  <a [routerLink]="['/faq/faq']">{{ 'faq' }}</a>
   {{ ' | '}}
   <a [routerLink]="['/faq/ticket-create']">{{ 'create' }}</a>
   {{ ' | '}}
