--- a/web/src/app/components/product-card/product-card.component.scss
+++ b/web/src/app/components/product-card/product-card.component.scss
@@ -25,7 +25,8 @@
 :host {
   transition: height 0.3s;
 
-  &.initial {
+  &.initial,
+  &.ready {
     max-height: 160px;
     height: 160px;
   }
@@ -33,17 +34,49 @@
   &.collapsed {
     height: 60px;
   }
+
+  &.loading {
+    max-height: 90px;
+    height: 90px;
+    width: 90px;
+    min-width: 90px;
+
+    & .card {
+      border-radius: 50%;
+      position: relative;
+      animation: spin 8s linear infinite;
+      margin: auto;
+      overflow: hidden;
+
+      &:before {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        // background: rgb(19 2 72 / 60%);
+      }
+    }
+  }
+}
+
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .card {
   position: relative;
   border-radius: 10px;
   display: block;
-  // width: 110px;
-  // max-width: 110px;
   height: 100%;
-  // height: 244px;
-  // max-height: 244px;
   font-size: var(--fontOrigin);
   border-radius: 8px;
   box-shadow: 0 1px 21px rgb(8 25 107);
@@ -53,9 +86,7 @@
   transition: all var(--speed) ease;
   overflow: hidden;
 
-  &:hover {
-    box-shadow: 0 1px 21px rgb(255 255 255);
-  }
+
 
   background: #0000004b;
 
@@ -65,6 +96,12 @@
     }
 
     background: #000000d1;
+  }
+}
+
+:host .card {
+  &:hover {
+    box-shadow: 0 1px 21px rgb(255 255 255);
   }
 }
 
@@ -99,7 +136,7 @@
   transition: transform 0.6s;
 }
 
-.card:hover .card__image img {
+:host:not(.loading) .card:hover .card__image img {
   -webkit-transform: scale(1);
   transform: scale(1);
 }
@@ -112,9 +149,15 @@
   top: 0;
 }
 
-.card__image:hover .overlay {
+:host:not(.loading) .card__image:hover .overlay {
   background: #00000057;
 }
+
+:host.loading .card__image .overlay {
+  background: rgb(255 236 108 / 79%);
+}
+
+
 
 .card__body {
   display: flex;
@@ -144,7 +187,7 @@
   transition: all var(--speed) ease;
 }
 
-.card:hover .card__name {
+:host:not(.loading) .card:hover .card__name {
   -webkit-transform: scale(1.4);
   transform: scale(1.4);
   background-clip: text;
