added locked product button state;

--- a/web/src/app/components/product-card/product-card.component.html
+++ b/web/src/app/components/product-card/product-card.component.html
@@ -11,5 +11,5 @@
   <div class="card__body">
     <h3 class="card__name" [title]="title">{{ visibleName }}</h3>
   </div>
+  <i class="lockedIcon mu mu-lock"></i>
 </a>
-  
