--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -5,8 +5,10 @@
   width: 700px;
   height: 550px;
   background: #24C6DC;
-  background: -webkit-linear-gradient(to bottom right, #7071df, #32c5da);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom right, #7071df, #32c5da); /* Standard syntax */
+  background: -webkit-linear-gradient(to bottom right, #7071df, #32c5da);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom right, #7071df, #32c5da);
+  /* Standard syntax */
   padding: 15px;
   display: flex;
   justify-content: space-between;
@@ -16,31 +18,41 @@
   column-gap: 16px;
 }
 
+.navDiv {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 8px;
+}
+
 .mainButtons {
   width: 90px;
   transition: 0.3s width;
+
   &.wide {
     width: 260px;
   }
-  & > * {
+
+  &>* {
     display: block;
     // max-height: 160px;
     // height: 160px;
   }
-  & > *:not(:first-child) {
+
+  &>*:not(:first-child) {
     margin-top: 8px;
   }
 }
 
 .homeBtn {
   display: block;
-  position: absolute;
-  bottom: 0;
+  // position: absolute;
+  // bottom: 0;
   right: 10px;
-  font-size: 100px;
+  font-size: 45px;
   color: rgba(255, 255, 255, 0.431);
   cursor: pointer;
   transition: 0.4s color;
+
   &:hover {
     color: rgba(255, 255, 255, 1);
   }
@@ -49,12 +61,13 @@
 .hidden {
   display: none;
 }
-.hidde{
+
+.hidde {
   background-color: #000;
 }
 
 h3 {
-  color:#fff;
+  color: #fff;
 }
 
 body {
@@ -84,4 +97,16 @@ body {
 .group {
   display: flex;
   column-gap: 6px;
+}
+
+.bottomButtonsContainer {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  width: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  column-gap: 2px;
+  padding-right: 6px;
 }
