* web: HOST-1 added response interceptor;

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -104,5 +104,7 @@
   {{ ' | '}}
   <a (click)="loadFaq5()">{{ 'refresh faq module' }}</a>
   {{ ' | '}}
+  <a [routerLink]="['/doro/event-create']">{{ 'event-create' }}</a>
+  
 </div>
 
