* web: before lazy in remotes fix;

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -105,6 +105,10 @@
   <a (click)="loadFaq5()">{{ 'refresh faq module' }}</a>
   {{ ' | '}}
   <a [routerLink]="['/doro/event-create']">{{ 'event-create' }}</a>
+  {{ ' | '}}
+  <a [routerLink]="['/doro/event-list']">{{ 'event-list' }}</a>
+  {{ ' | '}}
+  <a [routerLink]="['/doro/schedule-create']">{{ 'schedule-create' }}</a>
   
 </div>
 
